# Develop_Template

./: CMakeLists.txt  README.md
gtest/: CMakeLists.txt
myfunctoin/: CMakeLists.txt  List.cpp  List.h  polinoms.cpp  polinoms.h  roman.cpp  roman.h
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_polinoms.cpp  test_roman.cpp
